# cinelerra-cve

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  LICENSE  Makefile  Makefile.am  Makefile.cvs  NEWS  README  README.BUILD  README.cinelerra_rpm  TODO  acinclude.m4  autogen.sh  cinelerra-cvs-current.spec  cinelerra-cvs-current.spec.in  config.h.in  configure  configure.ac  configure.in  datatype.h  global_config  plugin_config  soundtest.c
cinelerra/: .gitignore  CHANGELOG  CHANGELOG.1.1.7  CHANGELOG.1.1.8  CHANGELOG.1.1.9  CHANGELOG.1.2.0  CHANGELOG.1.2.1  CHANGELOG.1.2.2  CHANGELOG.1.2.3  CHANGELOG.2.1  Makefile  Makefile.am  RELEASE_NOTES  TESTS  TESTS.TXT  TODO  aattachmentpoint.C  aattachmentpoint.h  aattachmentpoint.inc  aautomation.C  aautomation.h  aautomation.inc  aboutprefs.C  aboutprefs.h  aboutprefs.inc  adeviceprefs.C  adeviceprefs.h  adeviceprefs.inc  adrivermenu.C  adrivermenu.h  adrivermenu.inc  aedit.C  aedit.h  aedit.inc  aedits.C  aedits.h  aedits.inc  affine.C  affine.h  affine.inc  (+1082 more)
cinelerra/Blond/: about_bg_png.h  about_png.h  microsoft_credit_png.h
cinelerra/bak/: mainsession.C  mainsession.h  trackcanvas.C  trackcanvas.h
cinelerra/data/: Makefile.am  about_png.h  fake_ntsc.dv  fake_ntsc_dv.h  fake_pal.dv  fake_pal_dv.h  heroine_logo10_png.h  heroine_logo11_png.h  heroine_logo12_png.h  heroine_logo9_png.h  lad_picon.xcf.bz2  lad_picon_png.h  modes.xcf.bz2
cinelerra/tests/: alpha.xml  alpha2.xml  alpha3.xml  audio_transition.xml  bandwipe.xml  channels.xml  chromakey.xml  chromakey_feather.xml  chromakey_mask.xml  clip.xml  compressor.xml  crash1.xml  creditroll_rotate.xml  denoise.xml  diffkey.xml  drag.xml  effect_border.xml  effect_bounce.xml  effect_stack.xml  fade.xml  freezeframe.xml  gradient.xml  hologram_key.xml  hologram_mask.xml  interpolateaudio.xml  interpolatevideo.xml  labels.xml  loopaudio.xml  mask.xml  overlay.xml  pan.xml  pan_photo.xml  parametric.xml  reverse1.xml  reverse2.xml  rotate.xml  scale.xml  scalelinear.xml  sharedplugin_empty.xml  shift_keyframes.xml  (+13 more)
guicast/: .gitignore  Makefile  Makefile.am  arraylist.h  bcbar.C  bcbar.h  bcbar.inc  bcbitmap.C  bcbitmap.h  bcbitmap.inc  bcbutton.C  bcbutton.h  bcbutton.inc  bccapture.C  bccapture.h  bccapture.inc  bcclipboard.C  bcclipboard.h  bcclipboard.inc  bccounter.C  bccounter.h  bcdelete.C  bcdelete.h  bcdelete.inc  bcdialog.C  bcdialog.h  bcdialog.inc  bcdisplayinfo.C  bcdisplayinfo.h  bcdisplayinfo.inc  bcdragwindow.C  bcdragwindow.h  bcdragwindow.inc  bcfilebox.C  bcfilebox.h  bcfilebox.inc  bcfontentry.C  bcfontentry.h  bcfontentry.inc  bchash.C  (+210 more)
guicast/images/: apply_dn_png.h  apply_hi_png.h  apply_up_png.h  bar_png.h  button.xcf.bz2  cancel.xcf.bz2  cancel_dn_png.h  cancel_hi_png.h  cancel_up_png.h  cancel_uphi_png.h  check_png.h  checkbox.xcf.bz2  checkbox2.xcf.bz2  checkbox_checked_png.h  checkbox_checkedhi_png.h  checkbox_dn_png.h  checkbox_down_png.h  checkbox_hi_png.h  checkbox_up_png.h  checkbox_uphi_png.h  fadeslider_left_png.h  fadeslider_mid_png.h  fadeslider_right_png.h  fadeslider_up_png.h  fadeslider_uphi_png.h  fadevertical_left_png.h  fadevertical_mid_png.h  fadevertical_right_png.h  fadevertical_up_png.h  fadevertical_uphi_png.h  file_column_png.h  file_delete_dn_png.h  file_delete_hi_png.h  file_delete_up_png.h  file_film_png.h  file_folder_png.h  file_icons_dn_png.h  file_icons_hi_png.h  file_icons_up_png.h  file_icons_uphi_png.h  (+191 more)
libmpeg3/: .gitignore  Makefile  Makefile.a52  Makefile.am  bitstream.c  bitstream.h  configure  depend.a52  libmpeg3.c  libmpeg3.h  make_package  make_rpm  mpeg2qt.c  mpeg3atrack.c  mpeg3atrack.h  mpeg3cat.c  mpeg3css.c  mpeg3css.h  mpeg3demux.c  mpeg3demux.h  mpeg3dump.c  mpeg3ifo.c  mpeg3io.c  mpeg3io.h  mpeg3peek.c  mpeg3private.h  mpeg3private.inc  mpeg3protos.h  mpeg3strack.c  mpeg3title.c  mpeg3title.h  mpeg3toc.c  mpeg3toc2.c  mpeg3toc3.c  mpeg3tocutil.c  mpeg3vtrack.c  mpeg3vtrack.h  timecode.h  workarounds.c  workarounds.h
libmpeg3/audio/: Makefile  Makefile.am  ac3.c  ac3.h  dct.c  exponents.c  header.c  huffman.c  huffman.h  layer2.c  layer3.c  mpeg3audio.c  mpeg3audio.h  pcm.c  synthesizers.c  tables.c
libmpeg3/docs/: index.html
libmpeg3/video/: Makefile  Makefile.am  getpicture.c  headers.c  idct.c  macroblocks.c  mmxtest.c  motion.c  mpeg3cache.c  mpeg3video.c  mpeg3video.h  output.c  reconstruct.c  seek.c  slice.c  slice.h  subtitle.c  vlc.c
libsndfile/: Make.bat  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  config.status  configure  configure.ac  libsndfile.spec  libsndfile.spec.in  libtool  mkinstalldirs  reconf  sndfile.pc
mpeg2enc/: Makefile  Makefile.am  bdist1_mmx.s  conform.c  cpu_accel.c  fastintfns.h  fdct_mmx.s  fdctref.c  global.h  idct_mmx.s  mblock_sad_mmx.s  mblock_sub44_sads.c  mblock_sub44_sads_x86_h.c  mmx.h  motion.c  mpeg2enc.c  mpeg2enc.h  mtable.h  predcomp_mmx.s  predict.c  predict_mmx.s  putbits.c  puthdr.c  putmpg.c  putpic.c  putseq.c  quant_mmx.s  quantize.c  quantize_x86.c  ratectl.c  readpic.c  simd.h  transfrm.c  worksheet.c  writepic.c
plugins/: .gitignore  Makefile  Makefile.am  addplugin  install_plugins  themes
quicktime/: .quicktime.h.swp  CHANGELOG  Makefile  Makefile.2  Makefile.50  Makefile.am  Makefile.dv  Makefile.encore2  Makefile.encore50  Makefile.faac  Makefile.faad  Makefile.ffmpeg  Makefile.lame  Makefile.mad  Makefile.vorbis  README  atom.c  avcc.c  avi_hdrl.c  avi_idx1.c  avi_indx.c  avi_ix.c  avi_movi.c  avi_odml.c  avi_riff.c  avi_strh.c  avi_strl.c  cmodel_default.c  cmodel_float.c  cmodel_permutation.h  cmodel_yuv420p.c  cmodel_yuv422.c  codecs.c  codecs.h  colormodels.c  colormodels.h  configure  ctab.c  dechunk.c  depend.dv  (+141 more)
toolame-02l/: FUTURE  HISTORY  Makefile  Makefile.am  README  ath.c  ath.h  audio_read.c  audio_read.h  bitstream.c  bitstream.h  common.c  common.h  encode_new.c  encode_new.h  encoder.h  fft.c  fft.h  ieeefloat.c  ieeefloat.h  musicin.h  options.h  portableio.c  portableio.h  psycho_1.c  psycho_1_priv.h  psycho_3.c  psycho_3priv.h  psycho_4.c  psycho_4.h  toolame.c  toolame.h
(+1303 files in other folders)
